feat:新增添加、查询试卷接口

--- a/docs/数据库改动.md
+++ b/docs/数据库改动.md
@@ -3,3 +3,18 @@
 2. 题目池加多了两个字段
     - 所属用户ID (UserID) - 外键参考用户表，表示上传题目的用户
     - 题目答案
+
+# 2023.9.22
++  删除题目题库关联表
+```
+题库题目关联表 (BankQuestion):
+- 关联ID (LinkID) - 主键
+- 题库ID (BankID) - 外键参考题库管理表
+- 题目ID (QuestionID) - 外键参考题目池表
+```
++ 试卷和题目关联表添加 题目顺序
+
+#2023.9.23
++ 试卷表添加考试时长duration
++ 添加触发器
+    + 自动计算总分和结束时间 即无需传值
