feat:新增swagger-ui接口文档

--- a/docs/项目改动.md
+++ b/docs/项目改动.md
@@ -18,3 +18,8 @@
 + 试卷表添加考试时长duration
 + 添加触发器
     + 自动计算总分和结束时间 即无需传值
+    
+#2023.9.25
++ 考试表添加字段试卷id（PaperID）
++ 接口文档：http://localhost:8080/swagger-ui.html
+#
