fix:修改考试表和sql文件，删除mapper.xml文件

--- a/docs/项目改动.md
+++ b/docs/项目改动.md
@@ -22,4 +22,7 @@
 #2023.9.25
 + 考试表添加字段试卷id（PaperID）
 + 接口文档：http://localhost:8080/swagger-ui.html
-#
+
+#2023.9.26
++ 考试表添加字段考试时间
++ 添加触发器 考试结束=考试开始+考试时长
