feat:新增用户修改信息相关接口+将role加进加密token里面

--- a/docs/项目改动.md
+++ b/docs/项目改动.md
@@ -26,3 +26,14 @@
 #2023.9.26
 + 考试表添加字段考试时间
 + 添加触发器 考试结束=考试开始+考试时长
+
+#2023.10.07
++ 完成用户修改信息相关接口
++ 将role角色加进加密token里面
++ 解析token相关信息的代码如下：
+```java
+Claims claims = jwtUtils.parseToken(token);
+System.out.println(claims.getSubject()); // 用户名
+System.out.println(claims.getId()); // 用户id
+System.out.println(claims.getAudience()); // 用户角色
+```
