fix:添加试卷题目分数和试卷人数触发器

--- a/docs/项目改动.md
+++ b/docs/项目改动.md
@@ -37,3 +37,13 @@ System.out.println(claims.getSubject()); // 用户名
 System.out.println(claims.getId()); // 用户id
 System.out.println(claims.getAudience()); // 用户角色
 ```
+
+# 2023.10.08
++ 试卷不需要考试时间
++ 题目池添加分数
++ 删除questionbankassociation
++ 触发器：
+    + 添加题目再papermanagerment修改客观题和主观题分数
+    + 考试报名examregistration后 在对应的试卷papermanagement添加人数
++ 删除paper的人数 添加到exam
+
