fix:新增四个数据库表

--- a/docs/数据库表结构2.0.md
+++ b/docs/数据库表结构2.0.md
@@ -3,16 +3,19 @@
    - 用户名 (Username)
    - 密码 (Password)
    - 身份 (Role) - 可以使用数字或字符表示不同的身份（例如：1表示考生，2表示出卷人，3表示管理员）
+
 2. 考试表 (Exam):
    - 考试ID (ExamID) - 主键
    - 考试名称 (ExamName)
    - 考试描述 (ExamDescription)
    - 开始时间 (StartTime)
    - 结束时间 (EndTime)
+
 3. 考试报名表 (ExamRegistration):
    - 报名ID (RegistrationID) - 主键
    - 考试ID (ExamID) - 外键参考考试表
    - 用户ID (UserID) - 外键参考用户表
+
 4. 在线考试记录表 (ExamRecord):
    - 记录ID (RecordID) - 主键
    - 考试ID (ExamID) - 外键参考考试表
@@ -24,6 +27,7 @@
    - 主观分 (SubjectiveScore)
    - 总分 (TotalScore)
    - 状态 (Status) - 可以使用数字或字符表示不同的状态（例如：0表示未开始，1表示已结束，2表示考试中）
+
 5. 题目池表 (QuestionPool):
    - 题目ID (QuestionID) - 主键
    - 所属用户ID (UserID) - 外键参考用户表，表示上传题目的用户
@@ -31,19 +35,18 @@
    - 题目描述 (QuestionDescription)
    - 题目答案
    - 创建时间 (CreateTime)
+
 6. 题库管理表 (QuestionBank):
    - 题库ID (BankID) - 主键
    - 题库名称 (BankName)
    - 创建时间 (CreateTime)
+
 7. 题库题目关联表 (BankQuestion):
    - 关联ID (LinkID) - 主键
    - 题库ID (BankID) - 外键参考题库管理表
    - 题目ID (QuestionID) - 外键参考题目池表
-9. 题目题库关联表 (QuestionBankAssociation):
-   - 关联ID (AssociationID) - 主键
-   - 试题ID (QuestionID) - 外键参考试题管理表
-   - 题库ID (BankID) - 外键参考题库管理表
-10. 试卷管理表 (PaperManagement):
+
+8. 试卷管理表 (PaperManagement):
     - 试卷ID (PaperID) - 主键
     - 试卷名称 (PaperName)
     - 客观题分数 (ObjectiveScore)
@@ -53,13 +56,15 @@
     - 考试结束时间 (EndTime)
     - 考试人数 (NumberOfExaminees)
     - 创建人 (CreatedBy) - 外键参考用户表
-11. 试卷题目关联表 (PaperQuestion):
+    
+9. 试卷题目关联表 (PaperQuestion):
     - 关联ID (LinkID) - 主键
     - 试卷ID (PaperID) - 外键参考试卷管理表
     - 题目ID (QuestionID) - 外键参考题库或题目池表
     - 题目类型 (QuestionType) - 例如，可以使用数字或字符表示不同的题目类型（1表示主观题，2表示单选题，3表示多选题）
     - 分数 (Score) - 表示该题目在试卷中的分数
-12. 评卷管理表 (GradingManagement):
+    
+10. 评卷管理表 (GradingManagement):
     - 评卷ID (GradingID) - 主键
     - 试卷ID (PaperID) - 外键参考试卷管理表，表示要评卷的试卷
     - 考生ID (ExamineeID) - 外键参考用户表，表示参加考试的考生
@@ -69,3 +74,12 @@
     - 客观题分数 (ObjectiveScore)
     - 主观题分数 (SubjectiveScore)
     - 总分 (TotalScore)
+    
+（以下默认审核情况为0，0即为不通过，通过为1）
+11. 题目审核表（审核id，题目id，审核情况）
+
+12. 试卷审核表（审核id，试卷id，初级审核情况，终极审核情况）
+
+13. 角色表（角色id，角色名称(初级审核员0、终极审核员1、考试管理员2、考生3、出卷人4、监考人5和评卷人6)） 
+
+14. 监考记录表（记录id，考生id，考试id，监考人id，问题内容，时间，发送人id）
