--- a/docs/项目改动.md
+++ b/docs/项目改动.md
@@ -47,3 +47,9 @@ System.out.println(claims.getAudience()); // 用户角色
     + 考试报名examregistration后 在对应的试卷papermanagement添加人数
 + 删除paper的人数 添加到exam
 
+# 2023.10.20
++ 添加四个表
+    - 题目审核表
+    - 试卷审核表
+    - 角色表
+    - 监考记录表
