fix:修改sql文件,修改题库名称接口，

--- a/docs/项目改动.md
+++ b/docs/项目改动.md
@@ -53,3 +53,10 @@ System.out.println(claims.getAudience()); // 用户角色
     - 试卷审核表
     - 角色表
     - 监考记录表
+
+# 2023.10.22
++ 下列表中添加列 状态 0表示默认值 未审核 1表示审核通过 2表示审核不通过
++ 题目表：questionpoll 添加：juniorState 
++ 题目题库表：bankquestion 添加：ulimateState
++ 试卷表：papermanagement 添加：juniorState ulimateState
++ 考试表：exam 添加：juniorState ulimateState
