feat:新增评卷人功能和学生答题功能

--- a/docs/项目改动.md
+++ b/docs/项目改动.md
@@ -60,3 +60,6 @@ System.out.println(claims.getAudience()); // 用户角色
 + 题目题库表：bankquestion 添加：ulimateState
 + 试卷表：papermanagement 添加：juniorState ulimateState
 + 考试表：exam 添加：juniorState ulimateState
+
+# 2023.10.24
++ 添加表：学生考试成绩表userExamScore（序号id，学生id，考试id，总分）
