--- a/docs/项目改动.md
+++ b/docs/项目改动.md
@@ -64,18 +64,19 @@ System.out.println(claims.getAudience()); // 用户角色
 # 2023.10.24
 + 添加表：学生考试成绩表userExamScore（序号id，学生id，考试id，总分）
 
-新增考试获取的卷子列表要通过审核
+新增考试获取的卷子列表要通过审核 111
 
-交卷 主观题判空
+交卷 主观题判空  交卷时 的message
 
-我的考试渲染已报名的考试
+我的考试渲染已报名的考试 11
 
-渲染考试记录的答案
+渲染考试记录的答案 11
 
 分路由给相应角色
 
-考试已结束不能点击
+考试已结束不能点击 11
 
 加考试倒计时
 
 监考人
+
